<resources>
    <string name="app_name">EnglishQQ</string>
    <string name="fill_the_field">Fill the field</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register_now">Register now</string>
    <string name="next">Next</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="new_password">New password</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="password_not_match">Password not match</string>
    <string name="profil">Profil</string>
    <string name="settings">Settings</string>
    <string name="share_title">Hey check my application:\nLink ____________</string>
    <string name="start">Baslaw</string>
    <string name="change">Ozgertiw</string>
    <string name="text_develop">Islep shigushilar mennen baglanin</string>
    <string name="welcome_back">Welcome\nback</string>
    <string name="create_account">Create\naccount</string>
    <string name="sign_up">Sign Up</string>
    <string name="tu_sinikli">Tu\'sinikli</string>
    <string name="englishqq">EnglishQQ</string>
    <string name="englishqq_test">EnglishQQ Test</string>
    <string name="englishqq_study">EnglishQQ Study</string>
    <string name="juabin_bilew">Juabin bilew</string>
    <string name="basqa_bolimge_o_tiw">Basqa bolimge o\'tiw</string>
    <string name="o_zinizdin_pikirinizdi_qaldirip_ketin">O\'zinizdin pikirinizdi qaldirip ketin</string>
    <string name="jiberu">Jiberu</string>
    <string name="o_zgertu">O\'zgertu</string>
    <string name="almasiw">Almasiw</string>
    <string name="logout">Logout</string>
    <string name="prevention">Prevention</string>
    <string name="profile_updated">Profile janalandi :)</string>
    <string name="logout_title">Do you want to leave the office?</string>
    <string name="logout_message">"Are you sure?"</string>
</resources>