<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/image_sign_in"
        app:layout_constraintDimensionRatio="1:0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginVertical="@dimen/margin_large_large"
        android:fontFamily="@font/font_style"
        android:text="@string/welcome_back"
        android:textColor="@color/app_color"
        android:textSize="54sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:hint="@string/email"
        android:importantForAutofill="noExcludeDescendants"
        android:textColorHint="@color/secondary_text_color"
        app:boxCornerRadiusBottomEnd="@dimen/margin_large"
        app:boxCornerRadiusBottomStart="@dimen/margin_large"
        app:boxCornerRadiusTopEnd="@dimen/margin_large"
        app:boxCornerRadiusTopStart="@dimen/margin_large"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:maxLength="24"
            android:maxLines="1"
            android:padding="@dimen/padding_middle"
            android:paddingVertical="@dimen/padding_standard"
            android:shadowColor="@color/black"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:hint="@string/password"
        android:importantForAutofill="noExcludeDescendants"
        android:textColorHint="@color/secondary_text_color"
        app:boxCornerRadiusBottomEnd="@dimen/margin_large"
        app:boxCornerRadiusBottomStart="@dimen/margin_large"
        app:boxCornerRadiusTopEnd="@dimen/margin_large"
        app:boxCornerRadiusTopStart="@dimen/margin_large"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:maxLength="24"
            android:maxLines="1"
            android:padding="@dimen/padding_middle"
            android:paddingVertical="@dimen/padding_standard"
            android:shadowColor="@color/black"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRegisterNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:text="@string/register_now"
        android:textColor="@color/secondary_text_color"
        app:layout_constraintBottom_toBottomOf="@id/btnNext"
        app:layout_constraintEnd_toStartOf="@id/btnNext"
        app:layout_constraintTop_toTopOf="@id/btnNext" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_large"
        android:backgroundTint="@color/black"
        android:paddingHorizontal="@dimen/padding_middle"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_standard"
        app:cornerRadius="@dimen/rd_btn"
        app:layout_constraintEnd_toEndOf="@id/tilPassword"
        app:layout_constraintTop_toBottomOf="@id/tilPassword" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/loading"
        style="@style/SpinKitView.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:SpinKit_Color="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>