<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/app_color"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/settingIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginVertical="@dimen/margin_large_large"
        android:layout_marginStart="@dimen/margin_large"
        android:src="@drawable/ic_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:fontFamily="@font/font_style"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/settingIcon"
        app:layout_constraintStart_toEndOf="@id/settingIcon"
        app:layout_constraintTop_toTopOf="@id/settingIcon" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large_large"
        app:cardBackgroundColor="@color/app_color"
        app:cardCornerRadius="@dimen/cv_btn_size"
        app:cardElevation="@dimen/el_standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFirstName"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginVertical="@dimen/margin_standard"
                android:hint="@string/first_name"
                android:importantForAutofill="noExcludeDescendants"
                android:textColorHint="@color/secondary_text_color"
                app:boxCornerRadiusBottomEnd="@dimen/margin_large"
                app:boxCornerRadiusBottomStart="@dimen/margin_large"
                app:boxCornerRadiusTopEnd="@dimen/margin_large"
                app:boxCornerRadiusTopStart="@dimen/margin_large">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_style"
                    android:inputType="text"
                    android:maxLength="24"
                    android:maxLines="2"
                    android:padding="@dimen/padding_middle"
                    android:paddingVertical="@dimen/padding_standard"
                    android:shadowColor="@color/black"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLastName"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilFirstName"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginVertical="@dimen/margin_standard"
                android:hint="@string/last_name"
                android:importantForAutofill="noExcludeDescendants"
                android:textColorHint="@color/secondary_text_color"
                app:boxCornerRadiusBottomEnd="@dimen/margin_large"
                app:boxCornerRadiusBottomStart="@dimen/margin_large"
                app:boxCornerRadiusTopEnd="@dimen/margin_large"
                app:boxCornerRadiusTopStart="@dimen/margin_large">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_style"
                    android:inputType="text"
                    android:maxLength="24"
                    android:maxLines="2"
                    android:padding="@dimen/padding_middle"
                    android:paddingVertical="@dimen/padding_standard"
                    android:shadowColor="@color/black"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEditProfile"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilLastName"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="@dimen/margin_standard"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/font_style"
                android:paddingHorizontal="@dimen/padding_middle"
                android:text="@string/o_zgertu"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_standard"
                app:cornerRadius="@dimen/rd_btn" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/btnEditProfile"
                android:layout_marginHorizontal="@dimen/margin_large_large"
                android:background="@color/app_color_black" />

            <LinearLayout
                android:id="@+id/llShareAndDev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line"
                android:layout_marginVertical="@dimen/margin_large"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvShare"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="@dimen/margin_standard"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_marginEnd="@dimen/margin_standard"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/app_color"
                    app:cardCornerRadius="@dimen/cv_btn_size"
                    app:cardElevation="@dimen/el_standard">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:padding="@dimen/padding_standard"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_share" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvDeveloper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="@dimen/margin_standard"
                    android:layout_marginStart="@dimen/margin_standard"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/app_color"
                    app:cardCornerRadius="@dimen/cv_btn_size"
                    app:cardElevation="@dimen/el_standard">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:padding="@dimen/padding_standard"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_man" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLogout"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_standard"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_standard"
                app:cardBackgroundColor="@color/app_color"
                app:cardCornerRadius="@dimen/cv_btn_size"
                app:cardElevation="@dimen/el_standard"
                android:layout_below="@id/llShareAndDev"
                android:layout_centerHorizontal="true"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:fontFamily="@font/font_style"
                    android:textSize="@dimen/text_size_small"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_standard" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="start"
                    android:padding="@dimen/padding_standard"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_log_out"
                    android:layout_marginStart="@dimen/margin_standard"
                    />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/loading"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:SpinKit_Color="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

</androidx.constraintlayout.widget.ConstraintLayout>
